--- a/doze/res/values/strings.xml
+++ b/doze/res/values/strings.xml
@@ -14,6 +14,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="ambient_display_title">Ambient display</string>
+    <string name="ambient_display_dashboard_summary">Manage doze notifications</string>
     <string name="ambient_display_summary">Wake screen when you receive notifications</string>
 
     <string name="always_enabled_title">Always enable</string>
